Add IRC notifications to Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,6 @@ script:
 
   # Currently script just tests whether drupal-installer can successfully build
   - drush drupal-installer --db-url=mysql://root@localhost/ombucore --site-name=OmbuCore --version=release/0.8
+
+notifications:
+  irc: "irc.freenode.org#ombu"
